@@ -1,6 +1,165 @@
 
 
 
+#library(paleotree)
+#source("D://dave/workspace/paleotree/R/exhaustationFunctions.R")
+#nexustreefile <- "Dicranograptidae_Tree.txt"
+#phyloTree <- read.tree(nexustreefile)
+#strat_file <- "Dicranograptidae_Ranges.txt"
+#strat_data <- read.table(strat_file,header=FALSE,sep="\t")
+#setwd("D:\\dave\\research\\0 wagner exhaustion code")
+#nexus_file_name <- "Dicranograptidae_Song_&_Zhang_2014.nex"
+#char_data <- accio_data_from_nexus_file(nexus_file_name,polymorphs=FALSE)
+# rewrite read.tree output to match what I use
+#nTips <- Ntip(phyloTree)
+#
+#charMat <- char_data$Matrix
+#########################################################
+# modify data
+# what is this outgroup thing??
+#if (char_data$Outgroup>0)	{
+#	outgroup <- char_data$Outgroup
+#	}	else	{
+#	outgroup <- 1	
+#	}
+#
+# modify strat data
+#
+#if (length(simplify2array(strat_data))>notu)	{
+#	FAs <- strat_data[,1]
+#}else{
+#	FAs <- strat_data
+#	}
+
+
+# get data
+data(SongZhangDicrano)
+
+phyloTree<-cladogramDicranoX13
+
+# stratigraphic age data
+strat_data<-cbind(c(0, 4, 7, 7, 6, 6, 6, 2, 2, 1, 1, 6, 7), c(0, 5, 7, 7, 7, 7, 7, 2, 2, 1, 1, 7, 7))
+# get just first appearances from strat data
+FAs <- strat_data[,1]
+ 
+# modify char data
+charMat<-data.matrix(charMatDicrano)
+charMat[is.na(charMatDicrano)]<-0
+charMat<-(charMat-1)
+colnames(charMat)<-NULL
+charMat[is.na(charMatDicrano)]<-"?"
+
+# get character types
+nchar <- dim(charMat)[2]
+types <- rep(0,nchar)	# set character types to unordered (1)
+
+
+
+
+#the 'outgroup' is Exigraptus, first taxon listed in the matrix
+exhaustion_info <- accioExhaustionCurve(phyloTree,charMat,types,FAs,outgroup=1)
+
+
+
+exhaustion <- exhaustion_info$Exhaustion
+nstep <- max(exhaustion_info$Exhaustion[,1])
+char_changes <- sort(rowSums(exhaustion_info$State_Derivations),decreasing=TRUE)
+state_derivs <- sort(array(exhaustion_info$State_Derivations)[array(exhaustion_info$State_Derivations)>0],decreasing=TRUE)
+
+# get the best model for the size and distribution of character space
+best_character_exhaustion <- accio_best_acquisition_model(changes=char_changes,
+	models=c("exponential","gamma","lognormal","zipf"))
+bca <- best_character_exhaustion$Best_Distribution
+after3 <- exhaustion[2,1]
+hbca <- expected_exhaustion_curve(rel_ab_dist=bca, nstep, after3, length(bca))
+
+# get the best model for the size and distribution of state space
+best_state_exhaustion <- accio_best_acquisition_model(changes=state_derivs,
+	models=c("exponential","gamma","lognormal","zipf"))
+bsa <- best_state_exhaustion$Best_Distribution
+after3 <- exhaustion[3,1]
+hbsa <- expected_exhaustion_curve(rel_ab_dist=bsa, nstep, after3, length(bsa))
+
+mxx <- 10*ceiling(max(exhaustion[,1])/10)
+if (mxx<100)	{
+	mxx <- 5*ceiling(mxx/5)
+	}	else	{
+	mxx <- 10*ceiling(mxx/10)
+	}
+
+# plot accumulation of states
+xsize <- 3
+par(pin=c(xsize,xsize))
+ordinate <- "Novel States"
+abcissa <- "Total Changes"
+main_title <- "State Accumulation"
+plot(NA,type='n',axes=FALSE,main=main_title,
+	xlab=abcissa,ylab=ordinate,
+	xlim=c(0,mxx),ylim=c(0,mxx))
+draw_symmetric_axes(mxx,xsize)
+lines((1:nstep),hbsa,lwd=2,lty=2)
+points(exhaustion[,1],exhaustion[,2],pch=21,bg="skyblue",cex=1.25)
+
+
+
+
+
+
+
+
+
+
+
+exhaustion <- exhaustion_info$Exhaustion
+nstep <- max(exhaustion_info$Exhaustion[,1])
+char_changes <- sort(rowSums(exhaustion_info$State_Derivations),decreasing=TRUE)
+state_derivs <- sort(array(exhaustion_info$State_Derivations)[array(exhaustion_info$State_Derivations)>0],decreasing=TRUE)
+
+# get the best model for the size and distribution of character space
+best_character_exhaustion <- accio_best_acquisition_model(changes=char_changes,
+	models=c("exponential","gamma","lognormal","zipf"))
+bca <- best_character_exhaustion$Best_Distribution
+after3 <- exhaustion[2,1]
+hbca <- expected_exhaustion_curve(rel_ab_dist=bca, nstep, after3, length(bca))
+
+# get the best model for the size and distribution of state space
+best_state_exhaustion <- accio_best_acquisition_model(changes=state_derivs,
+	models=c("exponential","gamma","lognormal","zipf"))
+bsa <- best_state_exhaustion$Best_Distribution
+after3 <- exhaustion[3,1]
+hbsa <- expected_exhaustion_curve(rel_ab_dist=bsa, nstep, after3, length(bsa))
+
+mxx <- 10*ceiling(max(exhaustion[,1])/10)
+if (mxx<100)	{
+	mxx <- 5*ceiling(mxx/5)
+	}	else	{
+	mxx <- 10*ceiling(mxx/10)
+	}
+
+# plot activation of characters
+#xsize <- 3
+par(pin=c(xsize,xsize))
+ordinate <- "Altered Characters"
+abcissa <- "Total Changes"
+main_title <- "Character Alterations"
+plot(NA,type='n',axes=FALSE,main=main_title,
+	xlab=abcissa,ylab=ordinate,
+	xlim=c(0,mxx),ylim=c(0,mxx))
+#draw_symmetric_axes(mxx,xsize)
+lines((1:nstep),hbca,lwd=2,lty=3)
+points(exhaustion[,1],exhaustion[,3],pch=21,bg="green",cex=1.25)
+
+
+
+
+
+
+'
+
+
+#' @param phyloTree A phylogenetic tree of class \code{phylo} as used by package \code{ape}.
+
+
 accioExhaustionCurve <- function(phyloTree,charData,charTypes,outgroup=NULL,
 	firstAppearances=NULL,missingCharValue="?",inapplicableValue="-")	{
 	#
@@ -496,7 +655,7 @@ accio_matrix_tree_from_vector_tree <- function(vector_tree)	{
 ### ROUTINES TO RECONSTRUCT CHARACTER CHANGE
 
 # get history of character evolution implied by minimum steps
-accio_minimum_steps_history <- function(mtree,charData,charTypes,missingCharValue="?",inapplicableValue="-",outgroup=1)	{
+accio_minimum_steps_history <- function(mtree,charData,charTypes,missingCharValue="?",inapplicableValue="-",outgroup=NULL)	{
 	# mtree: matrix tree, where each row gives the branches stemming from a node
 	# charData: character data
 	# charTypes: 1 for unordered, 0 for ordered
@@ -564,7 +723,7 @@ accio_minimum_steps_history <- function(mtree,charData,charTypes,missingCharValu
 	}
 
 # get Sankoff matrix ancestral reconstructions
-Sankoff_character <- function(mtree,cvector,type=1,missingCharValue="?",inapplicableValue="-",outgroup=1)	{
+Sankoff_character <- function(mtree,cvector,type=1,missingCharValue="?",inapplicableValue="-",outgroup=NULL)	{
 	# method for reconstructing ancestral conditions.
 	obs_states <- sort(unique(cvector[cvector>=0]))
 	ttl_states <- length(obs_states)
