@@ -1,5 +1,6 @@
 Version - 3.0.1 - 
 -Post CRAN release version - adding Pete Wagner's functions relating to measuring character exhaustation.
+-Added another cladogram (an MPT from a 13-taxon analysis) to SongZhangDicrano example dataset
 -
 
 Version - 3.0.0 - 10-20-17
